New package for aoc restore example

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -3,7 +3,9 @@ cache_dir = .pytest_cache
 markers =
     aws
     aoc_aws_backup
+    aoc_aws_restore
     aoc_gcp_backup
+    aoc_gcp_restore
     gcp
     operations
 filterwarnings =
