Apply latest structure updates to aoc aws restore test
This change also includes consolidating the two test modules for
backup/restore into one.

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ markers =
     aws
     aoc_aws_backup
     aoc_aws_restore
+    aoc_aws_backup_restore
     aoc_gcp_backup
     aoc_gcp_restore
     gcp
