--- a/pytest.ini
+++ b/pytest.ini
@@ -2,9 +2,9 @@
 cache_dir = .pytest_cache
 markers =
     aws
-    aoc_aws_backup
-    aoc_aws_restore
-    aoc_aws_backup_restore
+    aoc_aws_backup_stack
+    aoc_aws_restore_stack
+    aoc_aws_backup_restore_stack
     aoc_gcp_backup
     aoc_gcp_restore
     aoc_aws_backup_restore
