--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
   rev: v2.2.2
   hooks:
   - id: pycln
+    args: [--config=pyproject.toml]
 - repo: https://github.com/asottile/pyupgrade
   rev: v3.4.0
   hooks:
