Add test case for performing aoc aws delete backups

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 cache_dir = .pytest_cache
 markers =
     aoc_aws_backup_stack
+    aoc_aws_delete_backups
     aoc_aws_restore_stack
     aoc_aws_backup_restore_stack
     aoc_gcp_backup
